--- a/app/scss/stylesheets/_base-color.scss
+++ b/app/scss/stylesheets/_base-color.scss
@@ -2,17 +2,6 @@
 
 $white: #fff;
 $black: #000;
-$lightBlack: #2c2c2c;
-$darkWhite: #a7a7a7;
-$darkGrey-color: #5e5d5d;
-$dark-form: #353535;
-$linkColor: #6e9294;
-$outputColor: #456d6f;
-
-$menu-back: #464E78;
-$block-border: 1px solid #151313;
-
-$inputColor: #0e0d0d;
-$goButton: #a2a2a2;
-$sectiongrey: #3c3b3b;
-$lightBlue: #69a3b5;
+$dark-grey: #3f3e41;
+$orange: #fd5c08;
+$light-grey: #545357;
