--- a/app/scss/libs.scss
+++ b/app/scss/libs.scss
@@ -1,1 +1,3 @@
-@import "app/libs/magnific-popup/dist/magnific-popup"
+@import "libs/normalize";
+@import "app/libs/magnific-popup/dist/magnific-popup";
+@import "libs/owl_carousel/owl.carousel";
