--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,2 +1,7 @@
+// Подключим заготовки:
+@import "stylesheets/stylesheets.scss";
+
 // Основные файлы
 @import "block/_header.scss";
+@import "block/_slider.scss";
+@import "block/_personaly-grid.scss";
