--- a/app/css/main.css
+++ b/app/css/main.css
@@ -336,6 +336,7 @@ a {
 
 .slider__owl .info__box-tab {
   position: relative;
+  cursor: pointer;
   background: #3f3e41;
   -webkit-transition: 0.2s ease-in-out;
   -o-transition: 0.2s ease-in-out;
@@ -343,6 +344,16 @@ a {
   -webkit-transition-property: background;
   -o-transition-property: background;
   transition-property: background;
+}
+
+.slider__owl .info__box-tab:hover {
+  -webkit-transition: 0.1s ease-in;
+  -o-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+  -webkit-transition-property: background;
+  -o-transition-property: background;
+  transition-property: background;
+  background: #545357;
 }
 
 .slider__owl .info__box-tab.active {
@@ -358,6 +369,16 @@ a {
   border-left: 36px solid transparent;
   border-right: 36px solid transparent;
   border-top: 6px solid #fd5c08;
+}
+
+.slider__owl .info__box-tab.active:hover {
+  -webkit-transition: 0.1s ease-in;
+  -o-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+  -webkit-transition-property: background;
+  -o-transition-property: background;
+  transition-property: background;
+  background: #fd5c08;
 }
 
 .slider__owl .info__box-tab .ticket:before {
@@ -400,16 +421,6 @@ a {
   padding: 18px 18px;
   width: 36px;
   height: 36px;
-}
-
-.slider__owl .info__box--icon:hover {
-  -webkit-transition: 0.1s ease-in;
-  -o-transition: 0.1s ease-in;
-  transition: 0.1s ease-in;
-  -webkit-transition-property: background;
-  -o-transition-property: background;
-  transition-property: background;
-  background: #545357;
 }
 
 .slider__owl .info__box-content {
@@ -524,11 +535,9 @@ a {
 .personaly-grid {
   padding: 115px 0 115px;
   width: 100%;
-  background-image: url("../../img/wordmap.png");
+  background: url("../../img/map-left.png"), url("../../img/map-right.png");
   background-repeat: no-repeat;
-  background-position: center;
-  -webkit-background-size: cover;
-          background-size: cover;
+  background-position: left 100%, right 100%;
 }
 
 .personaly-grid .section__header {
@@ -577,6 +586,14 @@ a {
 
 .personaly-grid .section__body {
   margin-top: 113px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .personaly-grid .section__body--grid {
@@ -591,4 +608,217 @@ a {
   display: -ms-flexbox;
   display: flex;
   position: relative;
+}
+
+.personaly-grid .section__body--grid .box .travel__img {
+  object-fit: contain;
+  -o-object-fit: contain;
+  max-width: 100%;
+  margin: auto;
+  -o-transition: opacity .75s ease-out;
+  transition: opacity .75s ease-out;
+  -webkit-transition: opacity .75s ease-out;
+}
+
+.personaly-grid .section__body--grid .box .travel__img.load {
+  opacity: .3;
+  -webkit-transition-delay: .2s;
+       -o-transition-delay: .2s;
+          transition-delay: .2s;
+}
+
+.personaly-grid .section__body--grid .box__price {
+  position: absolute;
+  top: 38px;
+  left: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.personaly-grid .section__body--grid .box__price--subtitle, .personaly-grid .section__body--grid .box__price--cost {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.personaly-grid .section__body--grid .box__price--subtitle {
+  font-size: 19px;
+}
+
+.personaly-grid .section__body--grid .box__price--cost {
+  font-size: 50px;
+  font-weight: 800;
+}
+
+.personaly-grid .section__body--grid .box__price .euro-icon {
+  margin-right: 6px;
+}
+
+.personaly-grid .section__body--grid .box__price .euro-icon::before {
+  content: '';
+  width: 21px;
+  height: 21px;
+  display: inline-block;
+  background: url("../../img/usd/euro-orange.png") no-repeat;
+}
+
+.personaly-grid .section__body--grid .box .hover__box {
+  visibility: hidden;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 26px 28px 42px 28px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: rgba(255, 255, 255, 0.87);
+  -webkit-transition: 0.1s ease;
+  -o-transition: 0.1s ease;
+  transition: 0.1s ease;
+  -webkit-transition-property: background;
+  -o-transition-property: background;
+  transition-property: background;
+}
+
+.personaly-grid .section__body--grid .box .hover__box--big {
+  height: 100%;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.personaly-grid .section__body--grid .box .hover__box::after {
+  content: '';
+  position: absolute;
+  left: 40px;
+  top: -10px;
+  width: 0;
+  height: 0;
+  border-left: 13px solid transparent;
+  border-right: 13px solid transparent;
+  border-bottom: 10px solid rgba(255, 255, 255, 0.87);
+}
+
+.personaly-grid .section__body--grid .box .hover__box--name, .personaly-grid .section__body--grid .box .hover__box--info {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.personaly-grid .section__body--grid .box .hover__box--name {
+  font-size: 19px;
+  color: #fd5c08;
+}
+
+.personaly-grid .section__body--grid .box .hover__box--info {
+  margin-top: 13px;
+  line-height: 30px;
+  font-weight: 600;
+  font-size: 34px;
+  color: #3f3e41;
+}
+
+.personaly-grid .section__body--grid .box .hover__box--more_btn {
+  margin-top: 34px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #3f3e41;
+  -webkit-transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  -webkit-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+}
+
+.personaly-grid .section__body--grid .box .hover__box--more_btn:hover {
+  color: #fd5c08;
+  -webkit-transition: easeIn-1s;
+  -o-transition: easeIn-1s;
+  transition: easeIn-1s;
+  -webkit-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+}
+
+.personaly-grid .section__body--grid .box .hover__box .bullet {
+  position: relative;
+  margin-right: 15px;
+}
+
+.personaly-grid .section__body--grid .box .hover__box .bullet:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-left: solid 8px #fd5c08;
+  border-bottom: solid 6px transparent;
+  border-top: solid 6px transparent;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+.personaly-grid .section__body--grid .box:hover .hover__box {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  -webkit-animation: .5s fadeIn;
+          animation: .5s fadeIn;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+    bottom: -100px;
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    bottom: 0;
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    bottom: -100px;
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    bottom: 0;
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
 }
