--- a/app/scss/block/_personaly-grid.scss
+++ b/app/scss/block/_personaly-grid.scss
@@ -1,10 +1,9 @@
 .personaly-grid{
 	padding: 115px 0 115px;
 	width: 100%;
-	background-image: url('../../img/wordmap.png');
+	background: url('../../img/map-left.png'), url('../../img/map-right.png');
 	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+	background-position: left 100%, right 100%;
 
 	.section__header{
 		display: flex;
@@ -37,21 +36,8 @@
 			color: $dark-grey;
 		}
 	}
-
-	.section__body{
-		margin-top: 113px;
-
-		&--grid{
-			display: grid;
-			grid-template-columns: 390px 390px 390px;
-			grid-template-rows: repeat(2, 390px);
-
-			.box{
-				display: flex;
-				position: relative;
-			}
-		}
-	}
+	
+	@import "_grid.scss";
 
 
 }
